[package]
name = "twitchapi"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.2.9", features = ["serde"] }
anyhow = "1.0.28"
