[package]
name = "twitchapi"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", default-features = false, features = ["json", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.2", features = ["serde"] }

